.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfstmplt4__c.object
<CustomObject>
    <description>glfstmplt4__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfstmplt4_glfstmplt2__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__glfstmplt4_lineno__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_filterondivprojdim__c</fullName>
        <formula>IF(rstkf__glfstmplt4_filterondiv__c , &apos;1&apos;, &apos;0&apos;) &amp; IF(rstkf__glfstmplt4_filteronproj__c , &apos;1&apos;, &apos;0&apos;) &amp; IF(rstkf__glfstmplt4_filterondim__c , &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_filterondivprojdim</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_filterondivprojdimmethod__c</fullName>
        <formula>IF(
 ISPICKVAL(rstkf__glfstmplt4_divmethod__c, &apos;All Divisions&apos;), &apos;_AD&apos;, IF(
  ISPICKVAL(rstkf__glfstmplt4_divmethod__c ,&apos;No Division&apos;), &apos;_ND&apos;, IF(
   ISPICKVAL(rstkf__glfstmplt4_divmethod__c ,&apos;Constant Division&apos;), &apos;_CD&apos;, IF(
    ISPICKVAL(rstkf__glfstmplt4_divmethod__c ,&apos;Variable Division&apos;), &apos;_VD&apos;, &apos;_B&apos;
   )
  )
 )
) &amp;
IF(
 ISPICKVAL(rstkf__glfstmplt4_projmethod__c, &apos;All Projects&apos;), &apos;_AP&apos;, IF(
  ISPICKVAL(rstkf__glfstmplt4_projmethod__c ,&apos;No Project&apos;), &apos;_NP&apos;, IF(
   ISPICKVAL(rstkf__glfstmplt4_projmethod__c ,&apos;Constant Project&apos;), &apos;_CP&apos;, IF(
    ISPICKVAL(rstkf__glfstmplt4_projmethod__c ,&apos;Variable Project&apos;), &apos;_VP&apos;, &apos;_B&apos;
   )
  )
 )
) &amp;
IF(
 ISPICKVAL(rstkf__glfstmplt4_dimmethod__c, &apos;Constant Dimension, Constant Value&apos;), &apos;_CDCV&apos;, IF(
  ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Constant Dimension, Exclude Constant Value&apos;), &apos;_CDECV&apos;, IF(
   ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Constant Dimension, Variable Value&apos;), &apos;_CDVV&apos;, IF(
    ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Constant Dimension, Exclude Variable Value&apos;), &apos;_CDEVV&apos;, IF(
     ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Constant Dimension, All Values&apos;), &apos;_CDAV&apos;, IF(
      ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Variable Dimension, Variable Value&apos;), &apos;_VDVV&apos;, IF(
       ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Variable Dimension, Exclude Variable Value&apos;), &apos;_VDEVV&apos;, IF(
        ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;Variable Dimension, All Values&apos;), &apos;_VDAV&apos;, IF(
         ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;All Dimensions, All Values&apos;), &apos;_ADAV&apos;, IF(
          ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;No Dimension&apos;), &apos;_ND&apos;, IF(
           ISPICKVAL(rstkf__glfstmplt4_dimmethod__c ,&apos;All Dimensions&apos;), &apos;_AD&apos;, &apos;_B&apos;
          )
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_filterondivprojdimmethod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfstmplt4_glfstmplt2__r.Name &amp; &apos;- Line &apos; &amp;   TEXT(rstkf__glfstmplt4_lineno__c)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_calclabel__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Line label for reference by calculations&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Line label for reference by calculations</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_colexportlabel1__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>1st Column Export Label to be Matched</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_colexportlabel2__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>2nd Column Export Label to be Matched</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_colexportlabel3__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>3rd Column Export Label to be Matched</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_command__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Command to be Executed&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Command to be Executed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accumulation Line</fullName>
                    <default>true</default>
                    <label>Accumulation Line</label>
                </value>
                <value>
                    <fullName>Calculation Line</fullName>
                </value>
                <value>
                    <fullName>Change Active Total Group</fullName>
                </value>
                <value>
                    <fullName>Define a Line Name</fullName>
                </value>
                <value>
                    <fullName>Do a Page Break</fullName>
                </value>
                <value>
                    <fullName>Print a Blank Line</fullName>
                </value>
                <value>
                    <fullName>Print a Double Underline</fullName>
                </value>
                <value>
                    <fullName>Print a Single Underline</fullName>
                </value>
                <value>
                    <fullName>Show Credits as Positive</fullName>
                </value>
                <value>
                    <fullName>Show Debits as Positive</fullName>
                </value>
                <value>
                    <fullName>Total Level 1</fullName>
                </value>
                <value>
                    <fullName>Total Level 2</fullName>
                </value>
                <value>
                    <fullName>Total Level 3</fullName>
                </value>
                <value>
                    <fullName>Total Level 4</fullName>
                </value>
                <value>
                    <fullName>Total Level 5</fullName>
                </value>
                <value>
                    <fullName>Total Level 6</fullName>
                </value>
                <value>
                    <fullName>Total Level 7</fullName>
                </value>
                <value>
                    <fullName>Total Level 8</fullName>
                </value>
                <value>
                    <fullName>Total Level 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_dimmethod__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Dimension Filtering Method&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Dimension Filtering Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Dimension</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, Constant Value</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, Exclude Constant Value</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, Variable Value</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, Exclude Variable Value</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, All Values</fullName>
                </value>
                <value>
                    <fullName>Constant Dimension, No Value</fullName>
                </value>
                <value>
                    <fullName>Variable Dimension, Variable Value</fullName>
                </value>
                <value>
                    <fullName>Variable Dimension, Exclude Variable Value</fullName>
                </value>
                <value>
                    <fullName>Variable Dimension, All Values</fullName>
                </value>
                <value>
                    <fullName>All Dimensions, All Values</fullName>
                </value>
                <value>
                    <fullName>All Dimensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_dimnum__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Dimension for Filtering&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Constant Dimension for Filtering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_dimval__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Dimension Value for Filtering&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Constant Dimension Value for Filtering</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Division for Filtering&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Constant Division for Filtering</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipName>glfstmplt4s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_divmethod__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Division Filtering Method&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Division Filtering Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Division</fullName>
                </value>
                <value>
                    <fullName>Variable Division</fullName>
                </value>
                <value>
                    <fullName>Constant Division</fullName>
                </value>
                <value>
                    <fullName>All Divisions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_exportlabel1__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>1st Ext Data Label for this Line&apos;s Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_exportlabel2__c</fullName>
        <inlineHelpText>Defined like 1st Label for Extdata Exported This Line. See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>2nd Ext Data Label for this Line&apos;s Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_exportlabel3__c</fullName>
        <inlineHelpText>Defined like 1st Label for Extdata Exported This Line. See page help, reference &quot;Line header: 1st Label for Extdata Exported This Line&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>3rd Ext Data Label for this Line&apos;s Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_filterondim__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, filter the line by Dimension.</inlineHelpText>
        <label>Filter on Dimension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_filterondiv__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, filter the line by division. If the line is to be filtered by project, Filter on Division must also be checked since projects belong to divisions.</inlineHelpText>
        <label>Filter on Division</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_filteronproj__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, filter the line by Project. Filter on Division must also be checked since Projects belong to Divisions.</inlineHelpText>
        <label>Filter on Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_glfstmplt2__c</fullName>
        <label>Financial Statement - Variant Header</label>
        <referenceTo>rstkf__glfstmplt2__c</referenceTo>
        <relationshipName>glfstmplt4s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_lineno__c</fullName>
        <inlineHelpText>The number of this line, which must be between 1 and 9999.</inlineHelpText>
        <label>Template Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_negateexpression__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked and if Command to be Executed = &quot;Calculation line&quot;, reverse the sign of the results of the equation: 13 becomes -13, -100 becomes 100, and so on.</inlineHelpText>
        <label>Negate Results of Expression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_negativecol1indent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Un-indent Text This Many Tabs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_neverexplode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the accounts specified in the account range for this line will not be displayed on the report</inlineHelpText>
        <label>Never Explode Account Ranges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_newtotalgroup__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: New total group&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>New Total Group</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_nonprinting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, line does not print. See page help, reference &quot;Line header: Non-printing Line Flag&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Non-printing Line Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_nototal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the results of the line are not totaled.</inlineHelpText>
        <label>Do Not Add Line Results to Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_num_tmplt5__c</fullName>
        <description>Count of GLFSTMPLT5</description>
        <inlineHelpText>This field contains the number of Statement Sublines associated with this Financial Report Line Header</inlineHelpText>
        <label>Number of Subordinate Statement Sublines</label>
        <summaryForeignKey>rstkf__glfstmplt5__c.rstkf__glfstmplt5_glfstmplt4__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_operator__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Expression Operator&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Expression Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Minus</fullName>
                </value>
                <value>
                    <fullName>Multiplied By</fullName>
                </value>
                <value>
                    <fullName>Divided By</fullName>
                </value>
                <value>
                    <fullName>As a Percentage Of</fullName>
                </value>
                <value>
                    <fullName>Percentage Change</fullName>
                </value>
                <value>
                    <fullName>No Operator</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                    <isActive>false</isActive>
                    <label>Divide By</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_printaspercentage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, print the line&apos;s results using the &quot;Percentage / Small Number&quot; format defined on the Variant header. If not checked, print the line&apos;s results as currency.</inlineHelpText>
        <label>Print Line Results as Percentages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Project for Filtering&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Constant Project for Filtering</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipName>glfstmplt4s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_projmethod__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Project Filtering Method&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Project Filtering Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Project</fullName>
                </value>
                <value>
                    <fullName>Variable Project</fullName>
                </value>
                <value>
                    <fullName>Constant Project</fullName>
                </value>
                <value>
                    <fullName>All Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_text__c</fullName>
        <inlineHelpText>The text to be printed on this line.</inlineHelpText>
        <label>Printed Line Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_textbold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, print the text in bold print.</inlineHelpText>
        <label>Bold the Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_textindent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of tab spaces to indent the text (from zero through three).</inlineHelpText>
        <label>Indent Text This Many Tabs</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_textitalics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, italicize the text.</inlineHelpText>
        <label>Italicize the Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_textunderline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, underline the text (and only the text). Not the same as the &quot;Print a single underline&quot; Command to be Executed, which underlines the data columns.</inlineHelpText>
        <label>Underline the Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value1calclabel__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Line Label for Src of Equation Left Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Line Label for Source of Left Side Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value1col__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Column for Source of Equation Left Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Column for Source of Left Side Data</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value1constant__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Value of Equation Left Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Constant Value of Left Side Data</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value1specialtype__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Type of Spl Value for Equation Left Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Type of Spl Value for Left Side Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Period Number</fullName>
                </value>
                <value>
                    <fullName>Periods in Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value1type__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Origin of Equation Left Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Origin of Left Side Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other Row, Same Column</fullName>
                </value>
                <value>
                    <fullName>Other Row, Other Column</fullName>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Entered at Runtime</fullName>
                </value>
                <value>
                    <fullName>Imported at Runtime</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Total, Same Column</fullName>
                </value>
                <value>
                    <fullName>Total, Other Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value2calclabel__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Line Label for Src of Equation Rightside&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Line Label for Source of Right Side Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value2col__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Constant Value of Equation Right Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Column for Source of Right Side Data</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value2constant__c</fullName>
        <label>Constant Value of Right Side Data</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value2specialtype__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Type of Spl Value Equation Right Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Type of Spl Value for Right Side Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Period Number</fullName>
                </value>
                <value>
                    <fullName>Periods in Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfstmplt4_value2type__c</fullName>
        <inlineHelpText>See page help, reference &quot;Line header: Origin of Equation Right Side&quot; in the Key Data Elements section, for extended help.</inlineHelpText>
        <label>Origin of Right Side Data</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other Row, Same Column</fullName>
                </value>
                <value>
                    <fullName>Other Row, Other Column</fullName>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Entered at Runtime</fullName>
                </value>
                <value>
                    <fullName>Imported at Runtime</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Total, Same Column</fullName>
                </value>
                <value>
                    <fullName>Total, Other Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report - Line Header</label>
    <listViews>
        <fullName>rstkf__RS_Financial_statement_Line_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfstmplt4_glfstmplt2__c</columns>
        <columns>rstkf__glfstmplt4_lineno__c</columns>
        <columns>rstkf__glfstmplt4_projmethod__c</columns>
        <columns>rstkf__glfstmplt4_dimmethod__c</columns>
        <columns>rstkf__glfstmplt4_divmethod__c</columns>
        <columns>rstkf__glfstmplt4_nonprinting__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial statement - Line Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report - Line Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__sub_lines_not_equal_or_more_than_999</fullName>
        <active>true</active>
        <description>No more Sublines may be added to this Line.</description>
        <errorConditionFormula>rstkf__glfstmplt4_num_tmplt5__c &gt;= 999</errorConditionFormula>
        <errorMessage>No more Sublines may be added to this Line.</errorMessage>
    </validationRules>
</CustomObject>